--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="code.js"></script>
+    <script src="Mohammedcode.js"></script>
   </body>
 </html>
