nav-bar created relates #6

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="/css/style-2.css" />
   </head>
   <body>
+<section><nav id="nav-bar">
+
+</nav></section>
+
+
+
     <script src="/js/module-1.js"></script>
     <script src="/js/module-2.js"></script>
   </body>
