--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link rel="stylesheet" href="/css/style-2.css" />
   </head>
   <body>
-<section><nav id="nav-bar">
+    <section><nav id="nav-bar"></nav></section>
 
-</nav></section>
-
-
+    <section><footer></footer></section>
 
     <script src="/js/module-1.js"></script>
     <script src="/js/module-2.js"></script>
