--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="/css/style-1.css" />
     <link rel="stylesheet" href="/css/style-2.css" />
   </head>
   <body>
-    <section><nav id="nav-bar"></nav></section>
+    <nav>
+      <div>|||News</div>
+      <div>
+        <input type="text" name="" id="search" /><button id="btn-search">
+          Search
+        </button>
+      </div>
+    </nav>
+    <div id="app">
+      <h2 class="header">Recent Quick News</h2>
 
-    <section><footer></footer></section>
+      <div id="news-container"></div>
+    </div>
+    <footer></footer>
 
     <script src="/js/module-1.js"></script>
     <script src="/js/module-2.js"></script>
