fix display bugs Relates #10

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
           Search
         </button>
       </div>
+      <ul class="links-list">
+        <li class="science">Science</li>
+        <li class="technology">Techonology</li>
+      </ul>
     </nav>
     <div id="app">
       <h2 class="header">Recent Quick News</h2>
-
-      <div id="news-container"></div>
+      <div class="containers">
+        <div id="news-container-1"></div>
+        <div id="news-container-2"></div>
+      </div>
     </div>
     <footer></footer>
 
