Final Result Relates #12

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav>
-      <div>|||News</div>
+      <div><i class="fa-regular fa-newspaper"></i></div>
       <div>
         <input type="text" name="" id="search" /><button id="btn-search">
           Search
@@ -32,7 +32,9 @@
         <div id="news-container-2"></div>
       </div>
     </div>
-    <footer></footer>
+    <footer>
+      <p class="copy-rights">All Copy Rights Reserved For M & M</p>
+    </footer>
 
     <script src="/js/module-1.js"></script>
     <script src="/js/module-2.js"></script>
