--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/css/style-1.css" />
-    <link rel="stylesheet" href="/css/style-2.css" />
+    <link rel="stylesheet" href="css/style-1.css" />
+    <link rel="stylesheet" href="css/style-2.css" />
   </head>
   <body>
     <nav>
@@ -36,7 +36,7 @@
       <p class="copy-rights">All Copy Rights Reserved For M & M</p>
     </footer>
 
-    <script src="/js/module-1.js"></script>
-    <script src="/js/module-2.js"></script>
+    <script src="js/module-1.js"></script>
+    <script src="js/module-2.js"></script>
   </body>
 </html>
